--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Jane Smith's Profile</title>
+  <title>Eunice Erika's Profile</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="styles.css">
   <link href="https://fonts.googleapis.com/css?family=Muli%7CRoboto:400,300,500,700,900" rel="stylesheet"></head>
@@ -10,27 +10,29 @@
 
     <div class="main-nav">
         <ul class="nav">
-          <li class="name">Jane Smith</li>
-          <li><a href="#">Home</a></li>
-          <li><a href="#">Experience</a></li>
+          <li class="name">Eunice Erika</li>
+          <li><a href="index.html">Home</a></li>
+          <li><a href="experience.html">Experience</a></li>
+          <li><a href="hobbies.html">Hobbies</a></li>
+          <li><a href="photos.html">Photos</a><li>
         </ul>
     </div>
 
     <header>
-      <img src="images/me.png" alt="Drawing of Jane Smith" class="profile-image">
-      <h1 class="tag name">Hello, I’m Jane.</h1>
-      <p class="tag location">My home is Portland, Oregon.</p>
+      <img src="images/me.jpg" alt="Photo of Eunice Erika" title="Photo of Eunice Erika" class="profile-image">
+      <h3 class="tag name">Hello, I’m Eunice Erika!</h3>
+      <p class="tag location">I live in CDO, Philippines.</p>
     </header>
 
     <main class="flex">
       <div class="card">
-        <h2>Background</h2>
+        <h2 class="title">Background</h2>
         <p>I’m an aspiring web designer who loves everything about the web. I've lived in lots of different places and have worked in lots of different jobs. I’m excited to bring my life experience to the process of building fantastic looking websites.</p>
         <p>I’ve been a professional cook and gardener and am a life-long learner who's always interested in expanding my skills.</p>
-      </div> 
+      </div>
 
       <div class="card">
-        <h2>Goals</h2>
+        <h2 class="title">Goals</h2>
         <p>I want to master the process of building web sites and increase my knowledge, skills and abilities in:</p>
         <ul class="skills">
           <li>HTML</li>
@@ -40,7 +42,7 @@
           <li>Rails</li>
         </ul>
         <p>I’d like to work for a web design firm helping clients create an impressive online presence.</p>
-      </div> 
+      </div>
 
     </main>
     <footer>
@@ -49,7 +51,7 @@
         <li><a href="#" class="social linkedin">LinkedIn</a></li>
         <li><a href="#" class="social github">Github</a></li>
       </ul>
-      <p class="copyright">Copyright 2015, Jane Smith</p>
+      <p class="copyright">&copy;2018 Eunice Erika Am-is</p>
     </footer>
   </body>
   </html>
